--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
      - CONAN_LOGIN_USERNAME: "rhard"
      - CONAN_CHANNEL: "testing"
      - CONAN_UPLOAD: "https://api.bintray.com/conan/rhard/conan"
+     - CONAN_STABLE_BRANCH_PATTERN: "release/*"
 
 linux: &linux
    os: linux
@@ -31,12 +32,6 @@ matrix:
 
       - <<: *linux
         env: CONAN_GCC_VERSIONS=7 CONAN_DOCKER_IMAGE=lasote/conangcc7
-
-      - <<: *linux
-        env: CONAN_CLANG_VERSIONS=3.9 CONAN_DOCKER_IMAGE=lasote/conanclang39
-
-      - <<: *linux
-        env: CONAN_CLANG_VERSIONS=4.0 CONAN_DOCKER_IMAGE=lasote/conanclang40
 
       - <<: *osx
         osx_image: xcode7.3
