--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
      - CONAN_CHANNEL: "testing"
      - CONAN_UPLOAD: "https://api.bintray.com/conan/rhard/conan"
      - CONAN_STABLE_BRANCH_PATTERN: "release/*"
+     - CONAN_BUILD_POLICY: "outdated"
 
 linux: &linux
    os: linux
